# obscura

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: draft_pdf.yml  main.yml
data/: Nuclear_Data.txt  README.md
data/Atomic_Response_Functions/: Ar_1s_1.txt  Ar_1s_2.txt  Ar_1s_3.txt  Ar_1s_4.txt  Ar_2p_1.txt  Ar_2p_2.txt  Ar_2p_3.txt  Ar_2p_4.txt  Ar_2s_1.txt  Ar_2s_2.txt  Ar_2s_3.txt  Ar_2s_4.txt  Ar_3p_1.txt  Ar_3p_2.txt  Ar_3p_3.txt  Ar_3p_4.txt  Ar_3s_1.txt  Ar_3s_2.txt  Ar_3s_3.txt  Ar_3s_4.txt  Xe_1s_1.txt  Xe_1s_2.txt  Xe_1s_3.txt  Xe_1s_4.txt  Xe_2p_1.txt  Xe_2p_2.txt  Xe_2p_3.txt  Xe_2p_4.txt  Xe_2s_1.txt  Xe_2s_2.txt  Xe_2s_3.txt  Xe_2s_4.txt  Xe_3d_1.txt  Xe_3d_2.txt  Xe_3d_3.txt  Xe_3d_4.txt  Xe_3p_1.txt  Xe_3p_2.txt  Xe_3p_3.txt  Xe_3p_4.txt  (+24 more)
data/Form_Factors_Ionization/: Ar_1s.txt  Ar_2p.txt  Ar_2s.txt  Ar_3p.txt  Ar_3s.txt  Xe_4d.txt  Xe_4p.txt  Xe_4s.txt  Xe_5p.txt  Xe_5s.txt
data/PandaX4T/: s2_response_er.csv
data/XENON1Te/: XENON1T_TotalEfficiency.txt
docs/: CONTRIBUTING.md
docs/source/: 01_Getting_Started.rst  02_Main_Modules.rst  03_Targets.rst  04_DM_Particle.rst  05_DM_Distribution.rst  06_DM_Detector.rst  07_Examples.rst  08_Experiments.rst  09_Citations.rst  10_Release_History.rst  11_License.rst  12_Contact.rst  Citations.rst  Contact.rst  DM_Detector.rst  DM_Distribution.rst  DM_Particle.rst  License.rst  Main_Modules.rst  References.rst  Release_History.rst  Software.rst  Targets.rst  conf.py  index.rst
examples/: Electron_Recoil_Limit.cpp  Nuclear_Recoil_Spectrum.cpp
include/: Astronomy.hpp  Configuration.hpp  DM_Distribution.hpp  DM_Particle.hpp  DM_Particle_Standard.hpp  Direct_Detection.hpp  Direct_Detection_Ionization.hpp  Direct_Detection_Migdal.hpp  Direct_Detection_Nucleus.hpp  Direct_Detection_Semiconductor.hpp  Experiments.hpp  Target_Electron.hpp  Target_Nucleus.hpp  example.hpp  version.hpp.in
include/obscura/: Astronomy.hpp  Configuration.hpp  DM_Distribution.hpp  DM_Halo_Models.hpp  DM_Particle.hpp  DM_Particle_Standard.hpp  Direct_Detection.hpp  Direct_Detection_Crystal.hpp  Direct_Detection_DMe.hpp  Direct_Detection_ER.hpp  Direct_Detection_Ionization.hpp  Direct_Detection_Migdal.hpp  Direct_Detection_Nucleus.hpp  Direct_Detection_Semiconductor.hpp  Experiments.hpp  Target_Atom.hpp  Target_Crystal.hpp  Target_Electron.hpp  Target_Nucleus.hpp
paper/: paper.bib  paper.md
src/: Astronomy.cpp  CMakeLists.txt  Configuration.cpp  DM_Distribution.cpp  DM_Halo_Models.cpp  DM_Particle.cpp  DM_Particle_Standard.cpp  Direct_Detection.cpp  Direct_Detection_Crystal.cpp  Direct_Detection_DMe.cpp  Direct_Detection_ER.cpp  Direct_Detection_Ionization.cpp  Direct_Detection_Migdal.cpp  Direct_Detection_Nucleus.cpp  Direct_Detection_Semiconductor.cpp  Experiments.cpp  Target_Atom.cpp  Target_Crystal.cpp  Target_Electron.cpp  Target_Nucleus.cpp  example.cpp  main.cpp
tests/: CMakeLists.txt  test.cfg  test2.cfg  test_Astronomy.cpp  test_Configuration.cpp  test_DM_Distribution.cpp  test_DM_Halo_Models.cpp  test_DM_Particle.cpp  test_DM_Particle_Standard.cpp  test_Direct_Detection.cpp  test_Direct_Detection_Crystal.cpp  test_Direct_Detection_DMe.cpp  test_Direct_Detection_ER.cpp  test_Direct_Detection_Ionization.cpp  test_Direct_Detection_Migdal.cpp  test_Direct_Detection_Nucleus.cpp  test_Direct_Detection_Semiconductor.cpp  test_Experiments.cpp  test_Target_Atom.cpp  test_Target_Crystal.cpp  test_Target_Electron.cpp  test_Target_Nucleus.cpp  tests.cpp
